[package]
name = "Req"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.108"
tokio = { version = "1.33", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
clap = { version = "4.4.7", features = [] }
